--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A booking plugin designed specifically for Virgin Active Constantia squash courts",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "build": "webpack --mode production",
+    "dev": "webpack --mode development --watch",
+    "start": "webpack serve --mode development"
   },
   "repository": {
     "type": "git",
@@ -20,5 +23,20 @@
   "bugs": {
     "url": "https://github.com/Richard-klement/va-squash-constantia/issues"
   },
-  "homepage": "https://github.com/Richard-klement/va-squash-constantia#readme"
+  "homepage": "https://github.com/Richard-klement/va-squash-constantia#readme",
+  "dependencies": {
+    "css-loader": "^7.1.2",
+    "mini-css-extract-plugin": "^2.9.2",
+    "postcss-loader": "^8.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "webpack": "^5.96.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
+    "babel-loader": "^9.2.1",
+    "webpack-cli": "^5.1.4"
+  }
 }
